--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
     <h1>Online Swear Jar</h1>
 
-    <form onsubmit="getFirstRoom(event)">
-        <button type="submit">Click me!</button>
-    </form>
+    <button onclick="getFirstRoom(event)">Click me!</button>
 
     <script src="index.js"></script>
 </body>
