working add event from dom with params

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <h1>Online Swear Jar</h1>
 
-    <button onclick="getFirstRoom(event)">Click me!</button>
+    <form id="jar-form">
+        <input type="text" name="roomCode" placeholder="Room Code..." value="ABCDEF" required/>
+        <button type="submit">Click me!</button>
+    </form>
 
     <script src="index.js"></script>
 </body>
